fixed minimap overflow and reversed activecolor in colorpicker

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ body {
     width: 20px;
     height: 20px;
     color: transparent;
+    border: 4px solid #eee;
 }
 
 .buttonListing button:focus {
@@ -56,16 +57,17 @@ body {
 }
 
 .buttonListing button:active {
-    border: 4px solid #eee !important;
+    border: 4px solid #eee;
 }
 
 .activeColor {
-    border: 4px solid #eee !important;
+    border: 0px solid #eee !important;
 }
 
 #logged-in-users {
     position: fixed;
-    bottom: 0;
+    top: 840px;
+    left: 20px;
     /*border: 2px solid #9fe2ff;*/
 }
 
